# Majlisna

./: .gitignore  CLAUDE.md  README.md  best-practices-roadmap.md  docker-compose.dokploy.yml  docker-compose.yml
.github/workflows/: e2e.yml  pipeline.yml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  main.py  pyproject.toml
backend/ibg/api/controllers/: stats.py
backend/ibg/api/utils/: cache.py
backend/ibg/socketio/controllers/: disconnect.py
backend/ibg/socketio/routes/: undercover.py
backend/ipg/: app.py  database.py  dependencies.py  logger_config.py  settings.py
backend/ipg/api/: constants.py  middleware.py
backend/ipg/api/controllers/: achievement.py  auth.py  challenge.py  codenames.py  codenames_game.py  codenames_helpers.py  disconnect.py  game.py  game_lock.py  mcqquiz.py  mcqquiz_game.py  room.py  shared.py  stats.py  undercover.py  undercover_game.py  user.py  wordquiz_game.py
backend/ipg/api/models/: codenames.py  error.py  event.py  game.py  mcqquiz.py  relationship.py  room.py  shared.py  stats.py  table.py  undercover.py  user.py  view.py
backend/ipg/api/routes/: auth.py  codenames.py  game.py  mcqquiz.py  room.py  stats.py  undercover.py  user.py  wordquiz.py
backend/ipg/api/schemas/: auth.py  common.py  error.py  game.py  mcqquiz.py  room.py  stats.py  undercover.py  wordquiz.py
backend/ipg/api/ws/: __init__.py  handlers.py  notify.py  server.py  state.py
backend/majlisna/: database.py  dependencies.py  settings.py
backend/majlisna/api/controllers/: achievement.py  auth.py  base_game.py  chat.py  codenames_game.py  friend.py  game.py  mcqquiz_game.py  room.py  undercover_game.py  user.py  wordquiz_game.py
backend/majlisna/api/models/: chat.py  friendship.py  table.py  token.py  user.py
backend/majlisna/api/routes/: auth.py  chat.py  game.py  room.py  user.py
backend/majlisna/api/schemas/: auth.py  codenames.py  error.py  shared.py  undercover.py  wordquiz.py
backend/majlisna/api/services/: email.py  social_auth.py
backend/majlisna/api/ws/: handlers.py  notify.py  server.py
backend/scripts/: fill_database.py  generate_fake_data.py  mcq_questions_data.py
backend/scripts/seed_data/: codenames_data.py  mcqquiz_data.py  undercover_data.py  wordquiz_data.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py
backend/tests/api/controllers/: test_achievement.py  test_auth.py  test_chat.py  test_codenames.py  test_codenames_game.py  test_codenames_helpers.py  test_concurrent_mutations.py  test_disconnect.py  test_game.py  test_game_lock.py  test_mcqquiz_game.py  test_race_conditions.py  test_room.py  test_room_share_link.py  test_shared.py  test_stats.py  test_undercover.py  test_undercover_game.py  test_user.py  test_wordquiz_game.py
backend/tests/api/models/: test_codenames.py  test_room.py  test_stats.py  test_undercover.py  test_user.py
backend/tests/api/routes/: test_auth.py  test_chat.py  test_codenames.py  test_codenames_game.py  test_game.py  test_room.py  test_room_share_link_route.py  test_stats.py  test_undercover.py  test_undercover_game.py  test_user.py
backend/tests/api/ws/: test_broadcast.py  test_connection.py  test_notify.py
backend/tests/sockets/controllers/: test_disconnect.py
docs/: architecture.drawio
e2e/: .env.e2e  docker-compose.e2e.yml  global-setup.ts  package.json  playwright.config.ts
e2e/helpers/: api-client.ts  constants.ts  test-setup.ts  ui-game-setup.ts
e2e/tests/codenames/: disconnect.spec.ts  full-game.spec.ts  game-gameplay.spec.ts  game-voting.spec.ts  multi-player.spec.ts  roles.spec.ts  ui-full-game.spec.ts
e2e/tests/mcqquiz/: game-single-player.spec.ts
e2e/tests/rooms/: create-join.spec.ts  disconnect.spec.ts  permissions.spec.ts  socket-events.spec.ts  toast-behavior.spec.ts
e2e/tests/undercover/: description-phase.spec.ts  disconnect.spec.ts  full-game.spec.ts  game-completion.spec.ts  game-errors.spec.ts  game-flow.spec.ts  multi-round.spec.ts  ui-full-game.spec.ts  vote-confirmation.spec.ts  voting.spec.ts
e2e/tests/user-journey/: full-flow.spec.ts
e2e/tests/websocket/: connection.spec.ts  disconnect-during-game.spec.ts
e2e/tests/wordquiz/: game-flow.spec.ts  game-single-player.spec.ts
front/: .dockerignore  CLAUDE.md  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
front/src/: main.tsx
front/src/api/: client.ts
front/src/components/: ConnectionStatus.tsx
front/src/components/language/: LanguageWelcomeModal.tsx
front/src/components/layout/: footer.tsx  main-nav.tsx
front/src/components/prayer-times/: CitySelector.tsx  PrayerTimesNav.tsx
front/src/components/rooms/: ChatPanel.tsx  RoomSettings.tsx
front/src/hooks/: use-codenames-game.ts  use-prayer-times.ts  use-socket.ts  use-undercover-game.ts
front/src/i18n/: index.ts
front/src/i18n/locales/: ar.json  en.json  fr.json
front/src/lib/: auth.ts
front/src/providers/: AuthProvider.tsx  QueryProvider.tsx  ThemeProvider.tsx
front/src/routes/: __root.tsx  index.tsx
front/src/routes/_auth/: achievements.tsx  (+2 more)
(+19 files in other folders)
